feat: modal dialog

--- a/greatFrontend/modal/src/index.css
+++ b/greatFrontend/modal/src/index.css
@@ -22,13 +22,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
 
 h1 {
   font-size: 3.2em;
@@ -65,4 +58,35 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+body {
+  font-family: sans-serif;
+}
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  inset: 0;
+  position: fixed;
+
+  align-items: center;
+  display: flex;
+  justify-content: center;
+
+  padding: 20px;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+
+  background-color: white;
+  padding: 24px;
+  border: none;
+}
+
+.modal-title {
+  margin: 0;
 }
