--- a/greatFrontend/typeahead/src/index.css
+++ b/greatFrontend/typeahead/src/index.css
@@ -1,5 +1,6 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 18px;
   line-height: 1.5;
   font-weight: 400;
 
@@ -24,10 +25,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+input {
+  font-size: 18px;
 }
 
 h1 {
